[package]
name = "aoch"
version = "1.2.0"
authors = ["Chris Moore"]
edition = "2018"
description = "A helper crate + commands to assist with the annual Advent of Code (AoC) competition"
homepage = "https://github.com/csm123199/aochelper"
repository = "https://github.com/csm123199/aochelper"
readme = "README.md"
license = "SimPL-2.0"
keywords = ["aoc", "advent-of-code", "programming-puzzles"]
categories = ["development-tools", "development-tools::cargo-plugins"]


[dependencies]
colored = "2.0.0"
ptree = "0.4.0"
atty = "0.2.13"
thiserror = "1.0.32"
aoch-proc = { path = "./aoch-proc" }

[workspace]
members = [".", "aoch-proc"]