[package]
name = "aoch"
version = "1.3.2"
authors = ["Chris Moore"]
edition = "2018"
description = "A helper crate + commands to assist with the annual Advent of Code (AoC) competition"
homepage = "https://github.com/chrismooredev/aochelper"
repository = "https://github.com/chrismooredev/aochelper"
readme = "README.md"
license = "SimPL-2.0"
keywords = ["aoc", "advent-of-code", "programming-puzzles"]
categories = ["development-tools", "development-tools::cargo-plugins"]

[dependencies]
# library only
colored = "2.1.0"
ptree = "0.4.0"
thiserror = "1.0.50"
aoch-proc = { path = "./aoch-proc" }

# shared
clap = { version = "4.4.11", features = ["derive"] }

# cli only
chrono = { version = "0.4.31", optional = true }
git2 = { version = "0.18.1", optional = true }
reqwest = { version = "0.11.22", features = ["blocking", "cookies"], optional = true }
toml_edit = { version = "0.21.0", optional = true }

cargo-edit = { git = "https://github.com/chrismooredev/cargo-edit", optional = true }
# cargo-edit = "0.12.2"

[features]
default = ["cli"]
cli = ["dep:cargo-edit", "dep:chrono", "dep:git2", "dep:reqwest", "dep:toml_edit"]

[workspace]
members = [".", "aoch-proc"]
